[package]
name = "toml-to-rdb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crc64 = "2.0.0"
flate2 = "1.0.28"
once_cell = "1.19.0"
pre-commit = "0.5.2"
regex = "1.10.3"
toml = "0.8.12"

[package.metadata.precommit]
fmt = "cargo fmt 2>&1"
test = "cargo test 2>&1"
